# rss-api

./: .env_template  .gitignore  CHANGELOG.md  Pipfile  README.md  feed_text_202408061018.csv  pyproject.toml
.github/: dependabot.yml
api/: db_connect.py  main.py
api/logging_config/: logger_config.json
